# vanguard

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: server.yml
client/: pubspec.yaml
client/android/app/: build.gradle
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/profile/: AndroidManifest.xml
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/linux/: CMakeLists.txt  my_application.cc
client/macos/Runner.xcodeproj/: project.pbxproj
client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
client/macos/Runner/Configs/: AppInfo.xcconfig
client/web/: index.html
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
src/: db.rs  investment.rs  main.rs  schema.sql  scraper.rs
