[package]
name = "vanguard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
color-eyre = "0.6"
cron = "0.11"
futures = "0.3"
rust_decimal = "1.25"
serde_json = "1.0"
tracing = "0.1"

[dependencies.axum]
version = "0.5"

[dependencies.chromiumoxide]
version = "0.3"
default-features = false
features = ["tokio-runtime"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = ["runtime-tokio-rustls", "sqlite"]

[dependencies.tokio]
version = "1.19.1"
features = ["macros", "rt-multi-thread", "signal", "sync", "time"]

[dependencies.tower-http]
version = "0.3"
features = ["set-header", "trace"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
